styles/main.css
body {
  background-image: linear-gradient(
      to bottom,
      rgb(62, 62, 62),
      rgba(0, 0, 0, 0.196)
    ),
    url(../images/smoke.jpeg);

  /*  background-image: linear-gradient(rgba(62, 62, 62, 0), rgba(0, 0, 0, 0.5));*/
  margin: 0;
  background-repeat: repeat;
  background-size: 100%;
  font-family: 'Raleway', sans-serif;
}

/* Add a black background color to the top navigation */
.navigation {
  /*background-color: #262626;  opaque background color*/
  background-color: #262626;
  overflow: hidden;
  position: relative;
}

/* Style the links inside the navigation bar */
.navigation a {
  float: left;
  color: rgb(238, 146, 40);
  text-align: center;
  padding: 30px;
  text-decoration: none;
  font-size: 20px;
  display: inline-block;
}

.navigation a.active {
  background-color: rgb(62, 62, 62);
  border-style: solid;
  border-width: 0px 0px 3px 0px;
  border-color: aqua;
}

.navigation a:hover {
  background-color: rgb(238, 146, 40);
  color: black;
}

h1 {
  background-color: #26262626;
  text-align: center;
  padding: 1.5vw;
  border-style: solid;
  border-width: 0px 0px 3px 0px;
  border-color: aqua;
  color: rgb(238, 146, 40);
  margin: 0;
  font-size: 45px;
}

h1:hover {
  border-color: rgb(238, 146, 40);
}

h2 {
  color: rgb(238, 146, 40);
  font-size: 30px;
}

.text-body-bg {
  background-color: #26262684;
  color: rgb(255, 255, 255);
  padding: 1.5vw;
  border-style: solid;
  border-width: 0px 0px 3px 0px;
  border-color: aqua;
  padding-left: 20px;
  padding-right: 20px;
}

.text-body-bg:hover {
  border-color: rgb(238, 146, 40);
  background-color: #262626bf;
}

li {
  list-style-type: '→ ';
  font-size: 20px;
}

p {
  font-size: 20px;
}

.sprint-list {
  display: none;
}

.dropdown-sprints:hover .sprint-list {
  display: inline-block;
  text-align: left;
}

.dropdown-sprints:hover #sprints-links {
  border-style: dashed;
  border-width: 0 0px 3px 0;
  border-color: aqua;
}

.contact-links {
  display: none;
}

.dropdown-contact:hover .contact-links {
  display: inline-block;
  text-align: left;
}

.dropdown-contact:hover #contact {
  border-style: dashed;
  border-width: 0 0px 3px 0;
  border-color: aqua;
}

.photo-me {
  width: 70%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 5%;
  border-style: solid;
  border-width: 3px;
  border-color: rgb(62, 62, 62);
}

.photo-me:hover {
  border-color: rgb(238, 146, 40);
}

.link-in-text {
  color: aqua;
}

.link-in-text:hover {
  color: rgb(238, 146, 40);
}

.question {
  font-weight: 800;
  padding: 10px;
  background-color: rgb(62, 62, 62);
}

.answer {
  list-style-type: none;

  padding: 20px;
}

